--- a/index.html
+++ b/index.html
@@ -60,15 +60,26 @@
     </section>
     <div class="container"><h1>. </h1></div>
 
-    
+    <div class="parent">
+      <div class="card">
+          <div class="content-box">
+              <span class="card-title">Who is Min Htut Khaing? </span>
+              <p class="card-content">
+                  A student? An athelete? A developer? A thinker? A creator? A problem-solver? An inquisitive teenager? A gamer?
+              </p>
+              <span class="see-more">Find out?</span>
+          </div>
+          
+      </div>
+    </div>
 
     <section class="features">
-      <h2>About US</h2>
+      <h2>Who am I?</h2>
 
       <div class="grid">
         <div class="tile large">
           <div class="text">
-            <h3>Feature 1</h3>
+            <h3>idk brah</h3>
 
             <p>Yew Tee Wee (YTW) is the most dominant club in Brawl Stars!</p>
           </div>
